# coffee-shop

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  deps.bzl  go.mod  go.work  nx.json  package-lock.json  package.json
apps/gateway/: go.mod  main.go  main_test.go  project.json
databases/mongodb/: .env  docker-compose.yml
databases/scylla/: docker-compose.yml
libs/custom_logger/: BUILD.bazel  custom-logger.go
libs/logger/: BUILD.bazel  logger.go
libs/toolkit/: go.mod  project.json  toolkit.go  toolkit_test.go
projects/databaseManager/: main.go  project.json
projects/databaseManager/config/: .env
projects/databaseManager/dbManager/: dbManager.go
projects/databaseManager/dbManager/db/: db.base.go  mongo.go
projects/databaseManager/dbManager/factory/: factory.go
projects/databaseManager/dbManager/mongoDbManager/: mongoDbManager.go
projects/databaseManager/models/: user.go
projects/databaseManager/server/: server.go
projects/databaseManager/server/handlers/: userDbHandlers.go
projects/databaseManager/server/middleware/: logging.go
projects/gateway/: BUILD.bazel  main.go  project.json
projects/gateway/config/: .env
projects/gateway/server/: BUILD.bazel  server.go
projects/gateway/server/handlers/databaseHandlers/: userHandlers.go
utils/custom-logger/: custom-logger.go  project.json
utils/customLogger/: customLogger.go  prettyCustomLogger.go  stackedCustomLogger.go
