load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/HeartLess10/coffee-shop
gazelle(
    name = "gazelle",
)

# gazelle:prefix github.com/HeartLess10/coffee-shop
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

####gazelle update-repos -from_file go.mod -to_macro=deps.bzl%go_dependencies -prune
