load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "logger",
    srcs = ["logger.go"],
    importpath = "github.com/HeartLess10/coffee-shop/libs/logger",
    visibility = ["//visibility:public"],
)

# go_test(
#     name = "go_hello_world_test",
#     srcs = ["hello_world_test.go"],
#     embed = [":go_hello_world"],
# )