load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gateway_lib",
    srcs = ["main.go"],
    importpath = "github.com/HeartLess10/coffee-shop/projects/gateway",
    visibility = ["//visibility:private"],
    deps = ["@com_github_joho_godotenv//:godotenv"],
)

go_binary(
    name = "gateway",
    embed = [":gateway_lib"],
    visibility = ["//visibility:public"],
)
